src/test/deca/etape_A/invalid/if2.deca
// Description :
//   test d'un if

// Résultats :
//   Erreur syntaxique
//   Ligne 9 : no viable alternative at input 'print'

{ 
if ( print("hello") ) {
   print("bye");
}